--- a/email-saas/package.json
+++ b/email-saas/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.32.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.12",
