Modified verbatimModuleSyntax to false

--- a/email-saas/tsconfig.json
+++ b/email-saas/tsconfig.json
@@ -8,7 +8,8 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
+    "ignoreDeprecations": "5.0",
 
     /* Strictness */
     "strict": true,
