--- a/email-saas/tsconfig.json
+++ b/email-saas/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleDetection": "force",
     "isolatedModules": true,
     "ignoreDeprecations": "5.0",
+    "verbatimModuleSyntax": false,
 
     /* Strictness */
     "strict": true,
